fix(example-site): float skiplink to avoid layout shift

--- a/site/documents/styles.css/_block_styles.css
+++ b/site/documents/styles.css/_block_styles.css
@@ -690,12 +690,11 @@ a.skip-link {
 }
 
 a.skip-link:focus, a.skip-link:focus-within {
-  position: initial;
+  left: 1em;
+  top: 1em;
   width: initial;
   height: initial;
   display: block;
-  padding: 0.25em 0.5em;
   max-width: var(--paragraph-width);
-  margin-left: auto;
-  margin-right: auto;
+  background-color: var(--bg-color);
 }
